--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -9,9 +9,11 @@ landing: yes
 
 <section class="landing">
   <div class="row header">
+<!--
     <div class="col-sm-12 heading-img">
       <img src="assets/img/bundle_blaster_horiz.jpg" class="img-responsive" alt="Waterblasting Tools and Equipment"/>
     </div>
+-->
     <div class="col-sm-12 heading">
       <h1>Waterblast Tools &amp; Equipment</h1>
       <h3>Rotary and Automated Tools for High Pressure Waterblasting</h3>
@@ -30,14 +32,19 @@ landing: yes
       <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
       <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
       <button class="filter" data-filter=".hydro-demo">Concrete</button>
+      <button class="filter" data-filter=".accessories">Swivels</button>
       <button class="filter" data-filter=".accessories">Accessories</button>
 
+<!--
       <label>Sort:</label>
       <button class="sort" data-sort="myorder:asc">Automated</button>
       <button class="sort" data-sort="myorder:desc">Manual</button>
+-->
       
+<!--
       <label>Search:</label>
       <input type="text" id="search-input" placeholder="Type here">
+-->
     </div>
 
     <!-- product list -->
