--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -84,20 +84,20 @@ master-slider: yes
 
 <!-- Product tabs -->
   <section class="margin-bottom-60">
-      <div class="tabs tabs-style-linetriangle">
+      <div class="tabs tabs-style-bar">
           <nav>
               <ul>
-                  <li><a href="#section-linetriangle-1"><span>Specifications</span></a></li>
-                  <li><a href="#section-linetriangle-2"><span>Manuals/Docs</span></a></li>
-                  <li><a href="#section-linetriangle-3"><span>Videos</span></a></li>
-                  <li><a href="#section-linetriangle-4"><span>FAQs</span></a></li>
-                  <li><a href="#section-linetriangle-5"><span>Related</span></a></li>
+                  <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+                  <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+                  <li><a href="#section-bar-3"><span>Videos</span></a></li>
+                  <li><a href="#section-bar-4"><span>Questions</span></a></li>
+                  <li><a href="#section-bar-5"><span>Related</span></a></li>
               </ul>
           </nav>
           <div class="content-wrap">
 
             <!-- Specifications -->
-            <section id="section-linetriangle-1">
+            <section id="section-bar-1">
               <div class="col-sm-5">
                 <table class="table specs table-hover">
                 <tbody>
@@ -159,7 +159,7 @@ master-slider: yes
             </section>
 
             <!-- Manuals/Docs -->
-            <section id="section-linetriangle-2">
+            <section id="section-bar-2">
               <div class="col-sm-4">
                 <ul class="list-unstyled basic">
                   <h3>Manuals</h3>
@@ -182,7 +182,7 @@ master-slider: yes
             </section>
 
             <!-- Videos -->
-            <section id="section-linetriangle-3">
+            <section id="section-bar-3">
               <div class="row row-centered">
                 <div class="col-sm-4 col-centered">
                   <!-- Lightbox call -->
@@ -208,7 +208,7 @@ master-slider: yes
             </section>
 
             <!-- FAQs -->
-            <section id="section-linetriangle-4">
+            <section id="section-bar-4">
               <div class="col-sm-8">
                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                   <div class="panel panel-default">
@@ -245,7 +245,7 @@ master-slider: yes
                     <div class="panel-heading" role="tab" id="headingTwo">
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          What information is needed in order to properly configure a working system? <i class="indicator fa fa-caret-down pull-left" aria-hidden="true"></i>
+                          What information is needed in order to properly configure a working system? <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                         </a>
                       </h4>
                     </div>
@@ -288,7 +288,7 @@ master-slider: yes
             </section>
 
             <!-- Related Items -->
-            <section id="section-linetriangle-5" class="related container padding-tb-30">
+            <section id="section-bar-5" class="related container padding-tb-30">
               <div class="row row-centered">
                 <div class="col-sm-2 col-centered">
                   <a href="/banshee"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
