implementing user feedback

--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -47,7 +47,7 @@ permalink: /about
       <div class="testimonial">
         <p>"In 2015, NCTI allowed Evergreen Industrial Services to oversee our first fully automated hydro-blast turnaround.  Utilizing StoneAge automated equipment, Evergreen achieved the most proficient cleaning to date at an overall reduced cost and a much safer environment for hydro-blasting employees."</p>
         <p class="attrib">- Brent Peveto, NCTI</p>
-        <img src="assets/img/logo_ncti.gif" alt="NCTI Nippon Chemical Texas">
+        <img src="assets/img/logo_ncti.png" alt="NCTI Nippon Chemical Texas">
       </div>
     </div>
     <div class="item">
