--- a/manuals.html
+++ b/manuals.html
@@ -21,7 +21,7 @@ permalink: /manuals
           <li><strong>Data Sheet</strong> is an information sheet with base specifications.</li>
           <li><strong>Tool Talk</strong> provides deeper information about tool configuration and ordering.</li>
           <li><strong>Guide</strong> if additional information on ad hoc topics, including setup and upgrade, is available.</li>
-          <li><strong>Notice of Obsolescence</strong> for legacy products.</li>
+          <li><strong>Notice of Obsolescence</strong> for discontinued products.</li>
         </ul>
       </div>
     </div>
@@ -32,7 +32,7 @@ permalink: /manuals
     <div class="contact-nav">
       <ul class="nav nav-tabs container" role="tablist">
         <li role="presentation" class="active"><a href="#current-tab" aria-controls="current-tab" role="tab" data-toggle="tab">Current Products</a></li>
-        <li role="presentation"><a href="#legacy-tab" aria-controls="legacy-tab" role="tab" data-toggle="tab">Legacy/Obsolete Products</a></li>
+        <li role="presentation"><a href="#legacy-tab" aria-controls="legacy-tab" role="tab" data-toggle="tab">Discontinued Products</a></li>
       </ul>
       <div class="tab-content padding-tb-30" style="border-top:1px solid #ddd;">
         <div role="tabpanel" class="tab-pane active container" id="current-tab">
@@ -202,6 +202,46 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td><a href="/barracuda">BJV-P16</a></td>
+                <td>10K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank" class="btn btn-sm">PL 537</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/barracuda">BJV-P12</a></td>
+                <td>15K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank" class="btn btn-sm">PL 504</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/barracuda">BJV-M24</a></td>
+                <td>22K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank" class="btn btn-sm">PL 509</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/barracuda">BJV-MP12</a></td>
+                <td>22K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank" class="btn btn-sm">PL 506</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/barracuda">BJV-H9</a></td>
+                <td>40K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank" class="btn btn-sm">PL 519</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
                 <td><a href="/backout-prevention">BPT-100</a></td>
                 <td>VERTICAL TUBE SPLASHGUARD<br>For Banshee nozzles</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BPT-100_Manual.pdf" target="_blank" class="btn btn-sm">PL 571</a></td>
@@ -227,7 +267,7 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/boiler-tube-cleaner">BTC-100</a></td>
-                <td>BOILER TUBE CLEANER<br></td>
+                <td>BOILER TUBE CLEANER<br>No-entry process boiler cleaning system</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BTC-100_manual.pdf" target="_blank" class="btn btn-sm">PL 614</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/BTC-100_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"></td>
@@ -537,13 +577,13 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td>CY-MP12</td>
+                <td>CY</td>
                 <td>CYCLEAN<br>3D Self-rotating tank cleaning tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/CDA_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_CY.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
-                <td>DB-XX</td>
+                <td>DB</td>
                 <td>DECK BLASTER<br>High pressure floor cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/DB-XX_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_FC.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
@@ -582,6 +622,12 @@ permalink: /manuals
                 <td>PTL-2000, PTL-2412</td>
                 <td>PORTA-LANCE<br>Portable hand-lancing tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/PTL-2400_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>RJV</td>
+                <td>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/RJV_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
