--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -15,6 +15,7 @@ permalink: /service
   <div class="col-sm-7 margin-bottom-30">
     <h2 class="section-heading">Technical Support</h2>
     <p>For Technical Support, please contact StoneAge. Operator's manuals and repair videos are available on this website. They illustrate tools, identify parts, and detail maintenance and overhaul procedures.</p>
+    <p><a href="/manuals"><i class="fa fa-book"></i> Find product manuals here.</a></p>
 
     <h2 class="section-heading">Repairs</h2>
     <p>Repair &amp; Maintenance Service is available by the same technicians who build and test our tools. We try to complete repairs and test every tool within three days of receipt.</p>
