--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -63,6 +63,11 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      
+      <div class="promo-tag rect">
+        <a href="#">Special</a>
+      </div>
+      <div class="promo-tag tri"></div>
 
       <p class="product-description">The StoneAge AutoBox ABX-2L is an automated system for “hands-free” heat exchanger tube cleaning applications. It is designed with an emphasis on safety, ease of setup, portability and reliability. When paired with StoneAge Banshee rotary tube cleaning nozzles and lightweight positioner, the AutoBox ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
       <h2>Features</h2>
