--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -28,6 +28,9 @@
 <div id="abx-2l-train-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/G8x8qTNmc7Q?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="abx-2l-belt-vid">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/mlXJTcdLGoA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="abx-500-demo-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/RP77aZoHwNY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
