--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ permalink: /
       <div class="caption">
       <h4><a href="http://www.tristateseminar.com/" target="_blank">Tri-State Seminar<br><span class="small">September 20-22, 2016<br/>
           Las Vegas, NV</span></a></h4>
-        <p>High quality educational programming for water professionals</p>
+        <p><strong>Visit Us in Booth #1113</strong></p>
       </div>
     </div>
     <div class="row">
@@ -180,7 +180,7 @@ permalink: /
       <div class="caption">
       <h4><a href="http://www.weftec.org/" target="_blank">WEFTEC<br><span class="small">September 24-28, 2016<br/>
           New Orleans, LA</span></a></h4>
-        <p>The water quality event&trade;</p>
+        <p><strong>Visit Us in Booth #7259</strong></p>
       </div>
     </div>
   </div>
