--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -27,29 +27,29 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-01.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-01.jpg" alt="Banshee rotary tube cleaning nozzles">
+            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-01.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-03.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-03.jpg" alt="Banshee rotary tube cleaning nozzles">
+            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-03.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bt-03.jpg" alt="Banshee rotary tube cleaning nozzles">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bt-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-02.jpg" alt="Banshee rotary tube lancing nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-02.jpg" alt="Banshee rotary tube lancing nozzles">
+            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-05.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-05.jpg" alt="Banshee rotary tube cleaning nozzles">
+            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-05.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-06.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-06.jpg" alt="Banshee rotary tube cleaning nozzles">
+            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-06.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>4.5–8 gpm</td>
+                      <td>4.6–7.8 gpm</td>
                       <td><span class="metric">17–30 l/min</span></td>
                     </tr>
                     <tr>
@@ -409,7 +409,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>12–25 gpm</td>
+                      <td>11–24 gpm</td>
                       <td><span class="metric">45–95 l/min</span></td>
                     </tr>
                     <tr>
@@ -472,7 +472,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>12–49 gpm</td>
+                      <td>11–48 gpm</td>
                       <td><span class="metric">45–190 l/min</span></td>
                     </tr>
                     <tr>
@@ -986,12 +986,12 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/manuals/bn_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k/1500 bar Banshee Models User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/bn-40k_manual_insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/bns13_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
-                <li><a href="../assets/pdf/bn_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
-                <li><a href="../assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Talk</a></li>
+                <li><a href="/assets/pdf/manuals/bn_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k/1500 bar Banshee Models User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/bn-40k_manual_insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/bns13_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
+                <li><a href="/assets/pdf/bn_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
+                <li><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -1000,7 +1000,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
     </div>
   </div>
   <!-- End Product Info -->
@@ -1015,23 +1015,23 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/beetle"><img class="img-responsive" src="../assets/img/product/thumb-bt-07.jpg" alt="Beetle Pipe Cleaning Tools">
+      <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-bt-07.jpg" alt="Beetle Pipe Cleaning Tools">
       <h5>Beetle Pipe Cleaning Tools</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/gopher"><img class="img-responsive" src="../assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
+      <a href="/gopher"><img class="img-responsive" src="/assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
       <h5>Gopher Tube Cleaning Tools</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/abx-2l"><img class="img-responsive" src="../assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L Flex Lancing System">
+      <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L Flex Lancing System">
       <h5>AutoBox ABX-2L Flex Lancing System</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="../assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
+      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
       <h5>Boiler Tube Cleaner</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/backout-prevention"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
+      <a href="/backout-prevention"><img class="img-responsive" src="/assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
       <h5>Backout Prevention</h5></a>
     </div>
   </div>
@@ -1072,32 +1072,32 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
+        <img src="/assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
       </div>
       
       <div class="item">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
           <p class="signed">-Waterblast Contractor,<br/>Louisiana</p>
         </div>
-        <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
+        <img src="/assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
+        <img src="/assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
       </div>
 
     </div><!-- End wrapper -->
