--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -29,7 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-01.jpg" alt="Rotary swivels for waterblast tooling">
             <img class="ms-thumb" src="../assets/img/product/thumb-swivel-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>
+<!--              <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-sg.jpg" alt="Rotary swivels for waterblast tooling">
