--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -156,25 +156,39 @@ master-slider: yes
           </div>
           <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
-              <div class="col-sm-6">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-vid">
-                    <img src="/assets/vid/thumb/abx-2l-vid.png" alt="ABX-2L Overview video" class="img-responsive" />
-                  </a>
+              <div class="row">
+                <div class="col-sm-6">
+                  <!-- Lightbox call -->
+                  <div>
+                    <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-vid">
+                      <img src="/assets/vid/thumb/abx-2l-vid.png" alt="ABX-2L Overview video" class="img-responsive" />
+                    </a>
+                  </div>
+                  <!-- End Lightbox call -->
+                  <p class="caption">ABX-2L Overview</p>
                 </div>
-                <!-- End Lightbox call -->
-                <p class="caption">ABX-2L Overview</p>
+                <div class="col-sm-6">
+                  <!-- Lightbox call -->
+                  <div>
+                    <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-train-vid">
+                      <img src="/assets/vid/thumb/abx-2l-train-vid.png" alt="ABX-2L Training video" class="img-responsive" />
+                    </a>
+                  </div>
+                  <!-- End Lightbox call -->
+                    <p class="caption">ABX-2L Training</p>
+                </div>
               </div>
-              <div class="col-sm-6">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-train-vid">
-                    <img src="/assets/vid/thumb/abx-2l-train-vid.png" alt="ABX-2L Training video" class="img-responsive" />
-                  </a>
+              <div class="row">
+                <div class="col-sm-6">
+                  <!-- Lightbox call -->
+                  <div>
+                    <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-belt-vid">
+                      <img src="/assets/vid/thumb/abx-2l-belt-vid.png" alt="ABX-2L belt replacement video" class="img-responsive" />
+                    </a>
+                  </div>
+                  <!-- End Lightbox call -->
+                  <p class="caption">ABX-2L Belt Replacement</p>
                 </div>
-                <!-- End Lightbox call -->
-                  <p class="caption">ABX-2L Training</p>
               </div>
             </div>
           </div>
@@ -190,10 +204,11 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/abx-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/ABX-2L-V2_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (8mm)</a></li>
-                <li><a href="../assets/pdf/manuals/ABX-2L_Upgrade_Guide.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
-                <li><a href="../assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
+                <li><a href="/assets/pdf/abx-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-2L-V2_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (8mm)</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-2L_Upgrade_Guide.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-2L_Belt_Installation.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Belt Installation</a></li>
+                <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
